--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,13 +1,10 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "[Enter the domain of your tenant, e.g. contoso.onmicrosoft.com]",
-    "TenantId": "[Enter 'common', or 'organizations' or the Tenant Id (Obtained from the Azure portal. Select 'Endpoints' from the 'App registrations' blade and use the GUID in any of the URLs), e.g. da41245a5-11b3-996c-00a8-4d99re19f292]",
-    "ClientId": "[Enter the Client Id (Application ID obtained from the Azure portal), e.g. ba74781c2-53c2-442a-97c2-3d60re42f403]",
-    "ClientSecret": "[Copy the client secret added to the app from the Azure portal]",
-    "ClientCertificates": [
-    ],
-    // the following is required to handle Continuous Access Evaluation challenges
+    "Domain": "damienbodsharepoint.onmicrosoft.com",
+    "TenantId": "5698af84-5720-4ff0-bdc3-9d9195314244",
+    "ClientId": "d9d09d02-2486-47f1-ae22-17a5dea1c977",
+    //"ClientSecret": "--in-user-secrets-or-key-vault--",
     "ClientCapabilities": [ "cp1" ],
     "CallbackPath": "/signin-oidc"
   },
