--- a/Server/MicrosoftEntraIdMudBlazor.Server.csproj
+++ b/Server/MicrosoftEntraIdMudBlazor.Server.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.Identity.Web" Version="2.16.0" />
 		<PackageReference Include="Microsoft.Identity.Web.UI" Version="2.16.0" />
 		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.21.0" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders.TagHelpers" Version="0.21.0" />
 	</ItemGroup>
 
 </Project>
