--- a/Server/MicrosoftEntraIdMudBlazor.Server.csproj
+++ b/Server/MicrosoftEntraIdMudBlazor.Server.csproj
@@ -15,11 +15,11 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.8" NoWarn="NU1605" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.8" />
-		<PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="3.0.1" />
-		<PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
-		<PackageReference Include="Microsoft.Identity.Web.UI" Version="3.0.1" />
-		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.22.0" />
-		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders.TagHelpers" Version="0.22.0" />
+		<PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="3.2.0" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="3.2.0" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="3.2.0" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.0.0-preview.1" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders.TagHelpers" Version="1.0.0-preview.1" />
 	</ItemGroup>
 
 </Project>
