--- a/Server/MicrosoftEntraIdMudBlazor.Server.csproj
+++ b/Server/MicrosoftEntraIdMudBlazor.Server.csproj
@@ -13,13 +13,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.0" NoWarn="NU1605" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
-		<PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="3.4.0" />
-		<PackageReference Include="Microsoft.Identity.Web" Version="3.4.0" />
-		<PackageReference Include="Microsoft.Identity.Web.UI" Version="3.4.0" />
-		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.0.0-preview.2" />
-		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders.TagHelpers" Version="1.0.0-preview.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.4" NoWarn="NU1605" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="3.8.4" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="3.8.4" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="3.8.4" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="1.1.0" />
+		<PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders.TagHelpers" Version="1.1.0" />
 	</ItemGroup>
 
 </Project>
